# METURTLE-Sea-Turtle-Robot

./: LICENSE  README.md
METURTLE-Sea-Turtle-Robot/: run_autopilot.sh
METURTLE-Sea-Turtle-Robot/docs/budged/: Proje Malzeme Tedarik Süreci.pptx
METURTLE-Sea-Turtle-Robot/docs/planning/: Simple Gantt chart1.xlsx  Turtle Diagram for BA - Miro.html  activity.drawio  scenerio.drawio
METURTLE-Sea-Turtle-Robot/docs/planning/Turtle Diagram for BA - Miro_files/: 2whwxyp95e.jsonp  E-v1.js.indir  anchor.html  b19c70c7544f9755.js.indir  e7c92a7ef9760c84.js.indir  enterprise.js.indir  gtm.js.indir  hn9ca7nm9h  main(1).css  main(2).css  main.js.indir  recaptcha__tr.js.indir  saved_resource(3).html  saved_resource(4).html
METURTLE-Sea-Turtle-Robot/embedded code/arduino/robot_movement/: robot_movement.ino
METURTLE-Sea-Turtle-Robot/embedded code/matlab/: buckconverter.slx
METURTLE-Sea-Turtle-Robot/embedded code/micro_ros_firmware/src/: main.cpp
METURTLE-Sea-Turtle-Robot/embedded code/raspberry-pi/GPS/: gps_reader.py
METURTLE-Sea-Turtle-Robot/embedded code/raspberry-pi/ros2_tcp_node/: CmakeLists.txt  README.txt  package.xml  ros_integration_example.cpp
METURTLE-Sea-Turtle-Robot/software/ESC491/: app.py  app2.py  create_user.sql  database.db  index.html  index2.html  robot_client.py
METURTLE-Sea-Turtle-Robot/software/ESC491/test_codes/: app_flask.py  send_flask.py
METURTLE-Sea-Turtle-Robot/software/detect/: detect2.py  detect3.py
src/chassis_control/: CMakeLists.txt
src/robot/: package.xml
src/robot/robot/: compass_arduino.py  detect.py  sender.py  sender2.py
(+13 files in other folders)
