<?xml version="1.0"?>
<package format="2">
  <name>ros2_tcp_node</name>
  <version>0.1.0</version>
  <description>TCP to ROS2 Publisher Node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>

</package>
